test/fixtures/public/fail/semantic/if_while_result.jmm
/*  REASON:
    Boolean operation with non booleans

    ESTE TESTE FOI FEITO PELO NUNO
*/

class T {
    public static void main(String[] s) {
          int a;
          int d;
          boolean b;
          boolean c;

          while( 1 + 2  ){

          }

          if(!(1<3) && false){

          }
          else{

          }

          if(1 + this.foo()){

          }
          else{

          }

    }

    public int foo(){
        int aux;
        aux=1;
        return aux;
    }

}